ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.3.10
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding 17 (07/15/16), Sharding 18 (08/05/16)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Beginning a few days ago, the mongo shell cannot authenticate to mongos during the C Driver's Evergreen startup. For an example task failure, see https://evergreen.mongodb.com/task/mongo_c_driver_windows_64_vs2010_integration_test_latest_sharded_7e0105c26ef1b295739465afc8d4dac6218f0ea5_16_07_14_17_31_13.

      It logs:

       [2016/07/13 22:01:21.860] connecting to: 127.0.0.1:27017/admin
       [2016/07/13 22:01:21.862] MongoDB server version: 3.3.9-222-g9e7a989
       [2016/07/13 22:01:21.873] 2016-07-14T02:01:21.873+0000 E QUERY    [thread1] Error: Authentication failed. :
       [2016/07/13 22:01:21.873] DB.prototype._authOrThrow@src/mongo/shell/db.js:1414:20
       [2016/07/13 22:01:21.873] @(auth):6:1
       [2016/07/13 22:01:21.873] @(auth):1:2
       [2016/07/13 22:01:21.878] exception: login failed
      

            Assignee:
            Kaloian Manassiev
            Reporter:
            A. Jesse Jiryu Davis
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: