SERVER-25064 Make mongos upgrade w:1 to w:majority for auth writes

Also extend the auth tests to validate that both variants work.